force-app/main/default/objects/AccountTeamMember/fields/CWS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>CWS_IsActive__c</fullName>
    <description>Used in Flow for team member assignment</description>
    <formula>User.IsActive</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>