force-app/main/default/objects/AccountTeamMember/fields/CWS_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Account Team Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>