force-app/main/default/objects/AccountTeamMember/fields/CWS_Team_Member_Display__c.field-meta.xml
<CustomField>
    <fullName>CWS_Team_Member_Display__c</fullName>
    <description>Used In Visual Flow for Opportunity Assignment</description>
    <formula>User.FirstName + &apos; &apos; + User.LastName + &apos; - &apos; +  text(TeamMemberRole)</formula>
    <label>Team Member</label>
    <type>Text</type>
</CustomField>